<resources>
    <string name="app_name">CRS</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_mobile_number">Mobile Number</string>
    <string name="login_password">Password</string>
    <string name="login_sign_in">Login</string>
    <string name="login_forgot_password">Forgot password?</string>

    <string name="sur_name" translatable="false">Name</string>
    <string name="home">Home</string>
    <string name="survey">Survey</string>
    <string name="quarantine">Quarantine</string>
    <string name="relocation">Relocation</string>
    <string name="profile">Profile</string>

    <string name="git_test">Git test</string>
</resources>
