<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/action_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_survey"
            android:icon="@drawable/ic_survey"
            android:title="@string/survey"
            app:showAsAction="ifRoom"/>

        <item
            android:id="@+id/action_quarantine"
            android:icon="@drawable/ic_quarantine"
            android:title="@string/quarantine"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_relocation"
            android:icon="@drawable/ic_relocation"
            android:title="@string/relocation"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"
            app:showAsAction="ifRoom"/>

    </group>

</menu>