<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="loginViewModel"
            type="com.orendasoftware.crs.presentation.view_models.enrollment.LoginViewModel" />
        <variable
            name="signInClickListener"
            type="com.orendasoftware.crs.presentation.view.enrollment.SignInClickListener" />
        <variable
            name="handler"
            type="com.orendasoftware.crs.presentation.view.enrollment.LoginHandler"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.view.enrollment.LoginFragment">


        <ImageView
            android:layout_width="146dp"
            android:layout_height="100dp"
            android:src="@drawable/kop"
            android:id="@+id/imageView"
            android:layout_marginTop="96dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldUserId"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginTop="232dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/login_mobile_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_user_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:inputType="number"
                android:text="@={loginViewModel.userId}"
                android:maxLength="10"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPassword"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="304dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/login_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:inputType="textPassword"
                android:text="@={loginViewModel.password}"
                android:afterTextChanged="@{handler::passwordValidator}"
                android:maxLength="10"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:text="@string/login_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/button1"
            android:layout_marginStart="16dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:textColor="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginTop="408dp"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{(v)->signInClickListener.onSignInClick()}"
           />

        <TextView
            android:text="@string/login_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorAccent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="480dp"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>